[package]
name = "const_split_str"
description = "Split a `&'static str` at compile time"
authors = ["Maël Obréjan <mael.obrejan@protonmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/malobre/const_split_str"
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.38"
quote = "1.0.18"
syn = "1.0.94"

[dev-dependencies]
trybuild = "1.0.61"
